# openstack-ansible-galera_server

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  manual-test.rc  other-requirements.txt  requirements.yml  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/: Makefile
examples/: playbook.yml
files/: galera_new_cluster  mariabackup_script.py
handlers/: galera_upgrade_hook.yml  main.yml
meta/: main.yml
releasenotes/: galera_repo_deb822-fc1aa6b88ee33b57.yaml
tasks/: galera_bootstrap.yml  galera_client_main.yml  galera_client_post_install.yml  galera_client_ssl.yml  galera_cluster_state.yml  galera_devel_main.yml  galera_install.yml  galera_install_apt.yml  galera_install_dnf.yml  galera_install_download_extra_packages.yml  galera_install_portage.yml  galera_install_yum.yml  galera_install_zypper.yml  galera_post_install.yml  galera_pre_install.yml  galera_running_check.yml  galera_secure_mysql.yml  galera_server_backups.yml  galera_server_cluster_state.yml  galera_server_encryption.yml  galera_server_install.yml  galera_server_main.yml  galera_server_post_install.yml  galera_server_setup.yml  galera_server_ssl.yml  galera_server_upgrade.yml  galera_server_upgrade_pre.yml  galera_server_xinetd.yml  galera_setup.yml  galera_ssl.yml  galera_ssl_key_create.yml  galera_ssl_self_signed.yml  galera_upgrade.yml  galera_upgrade_check.yml  galera_upgrade_check_apt.yml  galera_upgrade_check_yum.yml  galera_upgrade_check_zypper.yml  galera_upgrade_post.yml  galera_upgrade_pre.yml  main.yml
tests/: inventory  (+18 more)
(+53 files in other folders)
